examples/test/testpolicy17775.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17775
  namespace: namespace358
spec:
  podSelector:
    matchLabels:
      key45: value22
      key7: value44
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key0: value37
      podSelector:
        matchLabels:
          key14: value47
          key8: value6
